bozo-book-library/k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: bozo-book-library-ingress
spec:
  defaultBackend:
    service:
      name: book-library-ui-svc
      port:
        number: 3000
  rules:
  - host: ingress.local
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name:  book-library-ui-svc
            port: 
              number: 3000
